RESOLVED FIXED221459
[SOUP] Fix error handling in WebKitFormDataInputStream
https://bugs.webkit.org/show_bug.cgi?id=221459
Summary [SOUP] Fix error handling in WebKitFormDataInputStream
Carlos Garcia Campos
Reported 2021-02-05 05:02:00 PST
We are checking the error parameter passed, that can be nullptr when not provided, we should be checking the return value of g_input_stream_read() instead.
Attachments
Patch (1.49 KB, patch)
2021-02-05 05:03 PST, Carlos Garcia Campos
aperez: review+
ews-feeder: commit-queue-
Carlos Garcia Campos
Comment 1 2021-02-05 05:03:09 PST
Adrian Perez
Comment 2 2021-02-05 05:21:45 PST
Comment on attachment 419390 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=419390&action=review > Source/WebCore/platform/network/soup/WebKitFormDataInputStream.cpp:92 > + if (bytesRead == -1) Good catch ^_^
Carlos Garcia Campos
Comment 3 2021-02-05 05:24:03 PST
Note You need to log in before you can comment on or make changes to this bug.