[SOUP] Fix error handling in WebKitFormDataInputStream https://bugs.webkit.org/show_bug.cgi?id=221459

Reviewed by Adrian Perez de Castro.

We are checking the error parameter passed, that can be nullptr when not provided, we should be checking the
return value of g_input_stream_read() instead.

* platform/network/soup/WebKitFormDataInputStream.cpp:
(webkitFormDataInputStreamRead):

Canonical link: https://commits.webkit.org/233734@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@272410 268f45cc-cd09-0410-ab3c-d52691b4dbfc